--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Regnault Marien, Vaillant François, Fourcade Caroline, Erpeldinger Guillaume">
     <meta name="description" content="Capture the flag web application">
+    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
     <title>{% block title %}Joshua{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     {% block stylesheet %}{% endblock %}
-    <link rel="icon" href="/assets/images/favicon.png">
-</head>
+-</head>
 
 <body>
 
