fix : add the empty option for pseudo fields

--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -97,7 +97,7 @@
                     <div class="col-12">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="inputGroup-github" >Pseudo github</span>
+                                <span class="input-group-text" id="inputGroup-github" >Your github pseudo</span>
                             </div>
                             <input type="text" class="form-control" id="github" name="github"  value="{{ user.github }}" placeholder="We just use it to get your avatar">
                         </div>
@@ -116,7 +116,6 @@
 {% endblock %}
 
 {%  block javascript %}
-<script src="/assets/js/frontFormControl.js"></script>
-<script src="/assets/js/FormControl.js"></script>
-<script src="/assets/js/user_form.js"></script>
+<script src="/assets/js/formControl.js"></script>
+<script src="/assets/js/userForm.js"></script>
 {% endblock %}
