add back control and return errors while adding user

--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -27,7 +27,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-lastname">Name *</span>
                         </div>
-                        <input type="text"  placeholder="Only letters please."  class="form-control" id="lastname" name="lastname" value="{{ user.name }}">
+                        <input type="text"  placeholder="Only letters please."  class="form-control" id="lastname" name="lastname" value="{{ user.lastname }}">
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-pseudo">Pseudo *</span>
                         </div>
-                        <input type="text"  placeholder="Only letters or numbers without space." class="form-control" id="joshua-pseudo" name="joshua-pseudo" value="{{ user.pseudo }}">
+                        <input type="text"  placeholder="Only letters or numbers without space." class="form-control" id="joshuapseudo" name="joshuapseudo" value="{{ user.joshuapseudo }}">
                     </div>
                 </div>
             </div>
