ended back control form form

--- a/src/View/Components/_select_specialty.html.twig
+++ b/src/View/Components/_select_specialty.html.twig
@@ -1,5 +1,5 @@
 <div class="input-group-prepend">
-    <label class="input-group-text"  id="inputGroup-specialty" for="specialty">Specialty</label>
+    <label class="input-group-text {% if errors.specialty %} error {% endif %}"  id="inputGroup-specialty" for="specialty">Specialty</label>
 </div>
 <select class="custom-select" id="specialty" name="specialty">
     {% for specialty in specialties %}
