--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -1,5 +1,4 @@
 {% extends 'layout.html.twig' %}
-
 {% block content %}
     <div class="container">
         <div class="row">
@@ -17,7 +16,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend ">
-                            <span class="input-group-text" id="inputGroup-firstname">Firstname *</span>
+                            <span class="input-group-text  {% if (errors.error_firstname) %} error {% endif %} " id="inputGroup-firstname">Firstname *</span>
                         </div>
                         <input type="text" maxlength="45" placeholder="Only letters please." class="form-control" id="firstname" name="firstname" value="{{ user.firstname }}">
                     </div>
@@ -25,7 +24,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroup-lastname">Name *</span>
+                            <span class="input-group-text  {% if (errors.error_lastname) %} error {% endif %} " id="inputGroup-lastname">Name *</span>
                         </div>
                         <input type="text"  placeholder="Only letters please."  class="form-control" id="lastname" name="lastname" value="{{ user.lastname }}">
                     </div>
@@ -35,7 +34,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroup-email">Email *</span>
+                            <span class="input-group-text  {% if (errors.error_email) %} error {% endif %} " id="inputGroup-email">Email *</span>
                         </div>
                         <input type="email"  placeholder="name@domain.ext" class="form-control" id="email" name="email" value="{{ user.email }}">
                     </div>
@@ -53,7 +52,7 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroup-password">Password *</span>
+                            <span class="input-group-text  {% if (errors.error_password) %} error {% endif %}" id="inputGroup-password">Password *</span>
                         </div>
                         <input type="password" class="form-control" id="password" name="password" value="">
                         <div class="input-group-append">
@@ -69,13 +68,15 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="inputGroup-password2">Repeat password *</span>
                         </div>
-                        <input type="password" class="form-control" id="password-copy" name="password-copy" value="">
+                        <input type="password" class="form-control" id="passwordcopy" name="passwordcopy" value="">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary show-pass" onmousedown="showPassword('password-copy')" onmouseup="hidePassword('password-copy')" type="button" id="button-addon2">
+                            <button class="btn btn-outline-secondary show-pass" onmousedown="showPassword('passwordcopy')" onmouseup="hidePassword('passwordcopy')" type="button" id="button-addon2">
                                 <i class="fa fa-eye"></i>
                             </button>
                         </div>
-                        <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase and 1 digit</small>
+                        <div>
+                            <small class="text-white">At least 8 characters whith at least 1 upperCase, 1 lowercase and 1 digit</small>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,12 +98,11 @@
                         <div class="col-12">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroup-github" >Your github pseudo</span>
+                                    <span class="input-group-text {% if (errors.error_github) %} error {% endif %} " id="inputGroup-github" >Your github pseudo</span>
                                 </div>
                                 <input type="text" class="form-control" id="github" name="github"  value="{{ user.github }}" placeholder="We just use it to get your avatar">
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6 align-self-center">
@@ -116,6 +116,5 @@
 {% endblock %}
 
 {%  block javascript %}
-<script src="/assets/js/formControl.js"></script>
 <script src="/assets/js/userForm.js"></script>
 {% endblock %}
