--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,7 +43,12 @@ h1 {
     font-size:1.5rem;
 }
 
-
+.bold {
+    font-weight: bold;
+}
+.text-red {
+    color:var(--josh-red);
+}
 /* ****************************************** */
 /* *********  BOOTSTRAP SURCHARGE  ********** */
 /* ****************************************** */
@@ -53,6 +58,9 @@ h1 {
     font-family: var(--josh-major-font);
     font-size:0.9rem;
 }
+
+/* USER */
+
 
 /* INDEX */
 
