--- a/src/View/Components/_select_campus.html.twig
+++ b/src/View/Components/_select_campus.html.twig
@@ -1,5 +1,5 @@
 <div class="input-group-prepend">
-        <label class="input-group-text" for="campus" id="inputGroup-campus">Campus</label>
+        <label class="input-group-text {% if errors.campus %} error {% endif %}" for="campus" id="inputGroup-campus">Campus</label>
 </div>
 <select class="custom-select" id="campus" name="campus">
         {% for campus in campuses %}
