fix : some details

--- a/src/View/User/user_confirm.html.twig
+++ b/src/View/User/user_confirm.html.twig
@@ -27,7 +27,7 @@
 
         <div class="row text-center">
             <div class="col-12 text-center">
-                <button class="btn btn-dark text-white" type="submit">Let's go to capture the flags<i class="fa fa-key"></i></button>
+                <a class="btn btn-dark text-white" href="/">Let's go to capture the flags<i class="fa fa-key"></i></a>
             </div>
         </div>
     </div>
