--- a/src/View/Components/_header.html.twig
+++ b/src/View/Components/_header.html.twig
@@ -1,4 +1,6 @@
 <header>
+    {{ dump(session) }}
+
     <nav class="navbar navbar-expand-lg navbar-dark d-flex">
         <a class="navbar-brand" href="/">Joshua</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
