--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,6 +49,10 @@ h1 {
 .text-red {
     color:var(--josh-red);
 }
+
+.navbar-brand {
+    font-size:1.8rem;
+}
 /* ****************************************** */
 /* *********  BOOTSTRAP SURCHARGE  ********** */
 /* ****************************************** */
