--- a/src/View/Components/_header.html.twig
+++ b/src/View/Components/_header.html.twig
@@ -1,5 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark d-flex">
+        <img src="/assets/images/logo/picto.svg">
         <a class="navbar-brand" href="/">Joshua</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
