--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -2,7 +2,6 @@
 
 {% block header %}{% endblock %}
 
-<!-- TODO Finir le responsive -->
 {% block content %}
 <div class="container">
     <div class="row justify-content-center mt-5">
@@ -10,10 +9,6 @@
     </div>
     <div class="container ml-lg-5">
         <form class="mt-5" method="post">
-            <div class="col-lg-11 offset-lg-1">
-                <p class="ml-5">{{ errors.error_email }}</p>
-                <p class="ml-5">{{ errors.error_password }}</p>
-            </div>
             <div class="row">
                 <div class="col-lg-6 offset-lg-2">
                     <div class="form-group row">
@@ -22,25 +17,30 @@
                     </div>
                     <div class="form-group row">
                         <label for="password" class="col-lg-6 col-form-label text-white text-nowrap">Joshua@User › Password :</label>
-                        <input type="password" class="form-control col-lg-5" name="password" id="password" placeholder="Password">
-                        <button class="btn btn-outline-secondary show-pass col-lg-1" onmousedown="showPassword('password')" onmouseup="hidePassword('password')" type="button" id="button-addon2">
-                            <i class="fa fa-eye"></i>
-                        </button>
+                        <div class="input-group col-lg-6 input-pass-index">
+                            <input type="password" class="form-control" name="password" id="password">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary show-pass" onmousedown="showPassword('password')" onmouseup="hidePassword('password')" type="button" id="button-addon2">
+                                    <i class="fa fa-eye"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <button class="btn col-lg-1 enter-btn"><img src="assets/images/button/enter-btn.svg" alt="" class="img-fluid"></button>
+                <button class="btn col-lg-1 enter-btn">
+                    <img src="assets/images/button/enter-btn.svg" alt="" class="img-fluid d-none d-lg-block">
+                    <img src="assets/images/button/enter-btn-tel.svg" alt="" class="img-fluid d-lg-none float-right">
+                </button>
             </div>
         </form>
         <div class="container offset-lg-2 mt-5 pl-lg-4">
             <div class="row">
-                <p class="text-white">Joshua@User › <span class="text-nowrap">Create an account ?</span></p>
-                <a href="/user/register/" class="ml-2"><img src="assets/images/button/little-enter-btn.svg" alt="" class="img-fluid little-btn"></a>
+                <p class="text-white">Joshua@User › <a href="/user/register/" class="text-nowrap index-link">Create an account ?</a></p>
             </div>
             <div class="row">
-                <p class="text-white">Joshua@User › <span class="text-nowrap">Forgot your password ?</span></p>
-                <a href="" class="ml-2"><img src="assets/images/button/little-enter-btn.svg" alt="" class="img-fluid little-btn"></a>
+                <p class="text-white">Joshua@User › <a href="/user/forgot/" class="text-nowrap index-link">Forgot your password ?</a></p>
             </div>
-        </div>
+        </div>r
     </div>
 </div>
 {% endblock %}
