--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -9,6 +9,9 @@
     </div>
     <div class="container ml-lg-5">
         <form class="mt-5" method="post">
+            <div class="col-lg-11 offset-lg-1">
+                <p class="text-red text-center">{{ error }}</p>
+            </div>
             <div class="row">
                 <div class="col-lg-6 offset-lg-2">
                     <div class="form-group row">
