--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -1,7 +1,130 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Create Contest{% endblock %}
+{% block title %}Create a contest{% endblock %}
 
 {% block content %}
-Ici, on crée un contest.
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1>Contest manager</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 offset-1">
+                <div class="text-center pb-3">
+                    <h2>Existing contests</h2>
+                </div>
+                <div class="row">
+                    <ul class="list-group col-12">
+                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
+                            <p class="mb-0 existing_challenge pb-1">Title of the first contest</p>
+                            <div class="row col-12">
+                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
+                                <div class="custom-control custom-switch mt-2 mr-4">
+                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
+                                    <label class="custom-control-label" for="isActive">Active</label>
+                                </div>
+                                <div class="custom-control custom-switch mt-2">
+                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
+                                    <label class="custom-control-label" for="display">Display</label>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
+                            <p class="mb-0 existing_challenge pb-1">Title of the second contest</p>
+                            <div class="row col-12">
+                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
+                                <div class="custom-control custom-switch mt-2 mr-4">
+                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
+                                    <label class="custom-control-label" for="isActive">Active</label>
+                                </div>
+                                <div class="custom-control custom-switch mt-2">
+                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
+                                    <label class="custom-control-label" for="display">Display</label>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
+                            <p class="mb-0 existing_challenge pb-1">Title of the third contest</p>
+                            <div class="row col-12">
+                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
+                                <div class="custom-control custom-switch mt-2 mr-4">
+                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
+                                    <label class="custom-control-label" for="isActive">Active</label>
+                                </div>
+                                <div class="custom-control custom-switch mt-2">
+                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
+                                    <label class="custom-control-label" for="display">Display</label>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item list-group-item-dark p-1 pl-2 mb-2">
+                            <p class="mb-0 existing_challenge pb-1">Title of the fourth contest</p>
+                            <div class="row col-12">
+                                <a class="btn btn btn-dark text-white mr-4 mt-1 p-1 pl-2 pr-2" href="#">Edit</a>
+                                <div class="custom-control custom-switch mt-2 mr-4">
+                                    <input type="checkbox" class="custom-control-input" id="isActive" name="isActive">
+                                    <label class="custom-control-label" for="isActive">Active</label>
+                                </div>
+                                <div class="custom-control custom-switch mt-2">
+                                    <input type="checkbox" class="custom-control-input" id="display" name="display">
+                                    <label class="custom-control-label" for="display">Display</label>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-4 offset-2">
+                <div class="row">
+                    <form action="/Admin/insertContest" method="post">
+                        <div class="row d-flex justify-content-center">
+                            <div class="text-center pb-3">
+                                <h2>Create a contest</h2>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon1">Title</span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="Contest title" aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="input-group mb-3">
+                                    {% include 'Components/_select_campus.html.twig' %}
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">Description</span>
+                                </div>
+                                <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Max 200 characters"></textarea>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon1">Duration</span>
+                                </div>
+                                <input type="number" class="form-control" placeholder="Contest duration in hours" aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="form-group">
+                                <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white">Next step (add some challenges) <i class="fa fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="form-group">
+                                <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white">Create a blank contest <i class="fa fa-save"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
