--- a/src/View/Components/_header.html.twig
+++ b/src/View/Components/_header.html.twig
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Admin</a>
+                    <a class="nav-link" href="/admin/index">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/user/register">register</a>
