--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -10,7 +10,7 @@
                 <a class="admin_button btn btn-danger" href="/admin/createChallenge">CHALLENGES</a>
             </div>
             <div>
-                    <a class="admin_button btn btn-danger" href="/admin/createContest">CONTESTS</a>
+                <a class="admin_button btn btn-danger" href="/admin/createContest">CONTESTS</a>
             </div>
             <div>
                 <a class="admin_button btn btn-danger" href="/admin/manageUsers">USERS</a>
@@ -19,7 +19,7 @@
                 <a class="admin_button btn btn-danger" href="/admin/addCampus">CAMPUS</a>
             </div>
             <div>
-                <a class="admin_button btn btn-danger" href="/admin/manageLanguages">LANGUAGES</a>
+                <a class="admin_button btn btn-danger" href="/admin/addSpecialty">LANGUAGES</a>
             </div>
         </div>
     </div>
