--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="icon" href="/assets/images/favicon.png">
     <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
     {% block stylesheet %}{% endblock %}
 </head>
 
 <body>
-
 {% block header %}
     {% include 'Components/_header.html.twig' %}
 {% endblock %}
