--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -38,10 +38,10 @@
         </form>
         <div class="container offset-lg-2 mt-5 pl-lg-4">
             <div class="row">
-                <p class="text-white">Joshua@User › <a href="/user/register/" class="text-nowrap index-link">Create an account ?</a></p>
+                <p class="text-white">Joshua@User › <a href="/user/register" class="text-nowrap index-link">Create an account ?</a></p>
             </div>
             <div class="row">
-                <p class="text-white">Joshua@User › <a href="/user/forgot/" class="text-nowrap index-link">Forgot your password ?</a></p>
+                <p class="text-white">Joshua@User › <a href="/user/forgot" class="text-nowrap index-link">Forgot your password ?</a></p>
             </div>
         </div>r
     </div>
