--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -6,7 +6,7 @@
                 <h1>Hey Wilder, you want to become a flag catcher ?</h1>
             </div>
         </div>
-        <form method="POST" action="/User/insertUser">
+        <form method="POST" action="/user/insertuser">
             <div class="row">
                 <div class="col-12 align-self-center text-center">
                     <img src="https://avatars.githubusercontent.com/{% if (user.github) %}{{user.github}}{% else %}github{% endif %}" alt="avatar github" id="avatar" class="img-thumbnail rounded-circle" width="85">
