--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -47,7 +47,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Title</span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Contest title" aria-describedby="basic-addon1" name="name">
+                            <input type="text" class="form-control" placeholder="Contest title" aria-describedby="basic-addon1" name="name" required>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -55,8 +55,8 @@
                             <div class="input-group-prepend">
                                 <label class="input-group-text" for="campus" id="inputGroup-campus">Campus</label>
                             </div>
-                            <select class="custom-select" id="campus" name="campus">
-                                <option value="all" selected>All campuses</option>
+                            <select class="custom-select" id="campus" name="campus" required>
+                                <option value="all" selected>All campus</option>
                                 {% for campus in campuses %}
                                     <option value="{{ campus.id }}" {% if user.campus == campus.id %} selected {% endif %}> {{ campus.city }}</option>
                                 {% endfor %}
@@ -68,7 +68,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">Description</span>
                             </div>
-                            <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Between 30 and 200 characters" name="description"></textarea>
+                            <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Between 30 and 200 characters" name="description" required></textarea>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -76,7 +76,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Duration</span>
                             </div>
-                            <input type="number" class="form-control" placeholder="Contest duration in hours" aria-describedby="basic-addon1" name="duration">
+                            <input type="number" class="form-control" placeholder="Contest duration in hours" aria-describedby="basic-addon1" name="duration" required>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
@@ -84,7 +84,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">Image</span>
                             </div>
-                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image">
+                            <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" required>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
